--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
+    "@heroicons/react": "^2.1.1",
     "@uiw/codemirror-theme-dracula": "^4.21.24",
     "@uiw/react-codemirror": "^4.21.24",
     "next": "14.1.3",
