--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-ace": "^10.1.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20",
