--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
     "@heroicons/react": "^2.1.1",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.4",
+    "@types/mdx": "^2.0.12",
     "@uiw/codemirror-theme-dracula": "^4.21.24",
     "@uiw/react-codemirror": "^4.21.24",
     "next": "14.1.3",
     "react": "^18",
     "react-ace": "^10.1.0",
     "react-dom": "^18",
+    "rehype-mdx-import-media": "^1.1.1",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
