--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-ace": "^10.1.0",
     "react-dom": "^18",
+    "rehype-highlight": "^7.0.0",
     "rehype-mdx-import-media": "^1.1.1",
     "sharp": "^0.33.3"
   },
